# GenshinAPI

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py
models/: __init__.py  character.py  etc.py  exception.py  stats.py
routes/v1/: __init__.py  users.py
utils/: __init__.py  genshin.py
